2006-05-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  disable libtool, this is Python code

2006-05-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/Makefile.am:
	* flumotion/component/encoders/__init__.py:
	* flumotion/component/muxers/__init__.py:
	  commit some build files

2006-05-02  Julien MOUTTE  <julien@moutte.net>

	* COPYING: Fix licence.
	* flumotion-windowsmedia.spec.in: Fix licence.

2006-04-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* flumotion/component/asf/Makefile.am:
	* flumotion/component/asf/__init__.py:
	* flumotion/component/asf/asf.py:
	* flumotion/component/asf/asf.xml:
	* flumotion/component/muxers/Makefile.am:
	* flumotion/component/wma/Makefile.am:
	* flumotion/component/wma/__init__.py:
	* flumotion/component/wma/wma.py:
	* flumotion/component/wma/wma.xml:
	* flumotion/component/wmv/Makefile.am:
	* flumotion/component/wmv/__init__.py:
	* flumotion/component/wmv/wmv.py:
	* flumotion/component/wmv/wmv.xml:
	  first pass at moving directories around

2006-04-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* configure.ac:
	* flumotion/component/wma/wma.py:
	* flumotion/component/wmv/wmv.py:
	* misc/Makefile.am:
	* misc/pycheckerhelp.py:
	* misc/pycheckerrc:
	  make "make check" work to avoid syntax errors in the future
	  fix some more pychecker errors

2006-04-27  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/wmv/wmv.py: Fix a bug. How did that
	get in here....

2006-04-25  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/asf/asf.xml: Hmmm how could my 
	tests have ever worked. Multiple eaters .. not feeders.

2005-12-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion-windowsmedia.spec.in:
	  update
	* flumotion/component/wma/wma.py:
	* flumotion/component/wmv/wmv.py:
	  fix syntax errors

2005-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>
