@@ -31,3 +31,8 @@ class ASFMuxer(feedcomponent.ParseLaunchComponent):
         pipeline += 'muxer.'
 
         return pipeline
+    
+    def configure_pipeline(self, pipeline, properties):
+        element = pipeline.get_by_name('muxer')
+        if properties.has_key('preroll-time'):
+            element.set_property('preroll-time', properties['preroll-time'])    
